feat: 강의 리스트 응답 객체 생성